--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "less": "^4.2.0",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-plugin-static-copy": "^2.2.0"
   }
 }
