--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://tgrochowski87.github.io/cookbook/",
+  "homepage": "https://tgrochowski87.github.io/home-cookbook/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
